--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,12 @@ name: CI Pipeline
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # More stable than ubuntu-latest or 24.04
 
     steps:
       - name: Checkout code
@@ -15,17 +17,15 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run flake8 linter
-        run: |
-          flake8 src tests --ignore=E501
+        run: flake8 src tests --ignore=E501
 
       - name: Run unit tests
-        run: |
-          pytest tests
+        run: pytest tests
